--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@ along with their legal statuses. Because of Leona's heritage, she was publicly a
    acquiring materials to make cannons and artillery. Leona also arranged the purchase and shipment of medicines to Vera Cruz. 
    She secretly transported them to neighborhoodsin Mexico City where she also hid revolutionary compatriots. 
    <br>
-   Not content as a rebel and arms dealer, Leona then teamed with Quintana Roo to perfect her journalistic prose and write political articles. 
-   He provided his family's printing presses to produce their liberal political ideas for the masses. Leona's revolutionary networks
+   Not content as a rebel and arms dealer, Leona then teamed with Quintana Roo to perfect her journalistic prose and write political 
+   articles. He provided his family's printing presses to produce their liberal political ideas for the masses. Leona's revolutionary networks
    then distributed those leaflets, informing the public of Spanish atrocities towards Native and Mestizo civilians, crimes associated 
-with the established social caste system, and the need to obtain independence of Spain.</p>
+   with the established social caste system, and the need to obtain independence of Spain.</p>
    with the established social caste system, and the need to obtain self-rule independent of Spain.</P>
  
+ <p>1813, Leona’s correspondence to Andres and her revolutionary network was intercepted by Spanish Royalists.
+ She was arrested fleeing Mexico City. Because of her social class status, the Court of Inquisition was limited 
+ in it's right to punish her brutally while interrogating her about the location of her revolutionary collaborators.
+ The court confiscated all her real properties and other bank assets, convinced a life without wealth and privilege would soon enough
+ reveal all the information they were seeking.</p>
 
-  <p>1813, Leona’s correspondence to Andres and her revolutionary network was intercepted by Spanish Royalists.
-    She was arrested fleeing Mexico City. Because of her social class status, the Court of Inquisition was limited 
-    in it's right to punish her brutally while interrogating her about the location of her revolutionary collaborators.
-    The court confiscated all her real properties and other bank assets, convinced a life without wealth and privilege would soon enough reveal all the information they were seeking.</p>
-
-     When that didn’t happen, the Court of Inquisition sentenced her to a convent prison at <em>Belen de Las Mochas.</em> </p>
-     <br>
-     <img src="https://raw.githubusercontent.com/VanessaGVilla/leona/main/lv18.jpg"/>
-     <h3>Fight for Freedom</h3>
+ When that didn’t happen, the Court of Inquisition sentenced her to a convent prison at <em>Belen de Las Mochas.</em> </p>
+  <br>
+  <img src="https://raw.githubusercontent.com/VanessaGVilla/leona/main/lv18.jpg"/>
+  <h3>Fight for Freedom</h3>
 <p>Leona was imprisoned for several months, when three colonial officers arrived unannounced. They demanded access to Leona,
-  claiming the need for another interrogation. The officers revealed themselves as rebel patriots, assisting Leona escape
-  by disguising her as a servent. She returned to Mexico City, reunited with her husband, where they both continued their revolutionary
-  activities.  Four years later, Leona and Andres were both arrested, but they were immediately granted amnesty from the Spanish
-   Royalists. In 1823, the newly-formed Mexican Congress rewarded Leona Vicario for her numerous sacrifices on behalf of the nation
+ claiming the need for another interrogation. The officers revealed themselves as rebel patriots, assisting Leona escape
+ by disguising her as a servent. She returned to Mexico City, reunited with her husband, where they both continued their revolutionary
+ activities.Four years later, Leona and Andres were both arrested, but they were immediately granted amnesty from the Spanish
+ Royalists. In 1823, the newly-formed Mexican Congress rewarded Leona Vicario for her numerous sacrifices on behalf of the nation
   of Mexico.
   Leona was given an estate, several houses in Mexico City, and a cash settlement for the total loss of her fortune in the service of
-   her country. Leona passed away in 1842. She received a Mexican State funeral, and her remains, which have been re-interred several
+  her country. Leona passed away in 1842. She received a Mexican State funeral, and her remains, which have been re-interred several
   times, are at the National Palace placed in the National Gallery.
 </p>
 <p>Brene Brown wrote: </p>
@@ -78,7 +78,7 @@ with the established social caste system, and the need to obtain independence of
   mixed heritage. She chose to live as a fearless woman, intent on helping change the oppressive system based on colonization
   and patriarchal dominance. 
 </p>
-<body>
+</body>
 <aside> <p>View more images of Leona</p>
 </aside> <main>
 <p>Welcome to a webpage designed for information on La Patria Madre de Mexico.</p>
