--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <meta name="description" content=" a webpage summarizing the life of Leona Vicario.">
   <title> Leona Vicario, the patron mother of Mexico.</title>
   <link rel="shortcut icon" href="favicon ico">
-<p>This biography will include sections of her life:</p>  
+<p>This biography will include sections of her life:</p> 
+  <a href="./page1.html">Early Life</a>
+<a href="./page2.html">Education</a>
+<a href="./page3.html"> Revolutionary Life</a>
+<a href="./page4.html"> La Patria Madre</a>
 <ul>
   <li>Early Life</li>
   <li> Education</li>
