--- a/index.html
+++ b/index.html
@@ -34,26 +34,28 @@ by filing for legal independence from her uncle, which allowed her to make all f
 was forcefully imposed on it by the Spanish. The 16th century Spaniards, along with their overlords in the Roman Catholic Church, 
 were so obsessed with race that they produced posters commissioned by artists to describe the 16 official <q>racial mixtures</q> 
 along with their legal statuses. Because of Leona's heritage, she was publicly acknowledged at the top of society heirarchy.
- It made her nearly untouchable when it came to capital crimes, along with a wealth of social privileges.</p>
+It made her nearly untouchable when it came to capital crimes, along with a wealth of social privileges.</p>
   
-  <br>
-  <p> Leona's extensive education had given her a foundation to develop critical thinking skills, which encouraged 
-   independence from the pervasive patriarchy of New Spain (Mexico). Her attention soon turned to revolutionary idealists, at 
-   great personal risk. It also brought her to the attention of a succesful lawyer, Quintana Roo.
-   The pair eventually married.</p>
-  <br>
-  <h3> Los Guadalupes-The Beginning of a Rebel Life </h3>
+  <h3> Education </h>
+<p> Leona received a prodigious education, a rare privilege for women at the time. She enjoyed reading, and collecting English
+  and French literature. She also immersed herself in the fine arts, classical music, and singing. European literature at the time 
+  was filled with political idealogies/rhetoric of overthrowing oppressive monoarchies, while advocating for equality.
+  Leona's extensive education had given her a foundation to develop critical thinking skills, which encouraged 
+  independence from the pervasive patriarchy of New Spain (Mexico). Her attention soon turned to revolutionary idealists, at 
+  great personal risk. It also brought her to the attention of a succesful lawyer, Quintana Roo (also involved with idealists).
+  The pair were eventually married.</p>
+  
+  <h4> Los Guadalupes-The Beginning of a Rebel Life </h4>
   <p> Leona joined Los Guadalupes, a secret rebel society receiving and distributing correspondence for the independence
    of New Spain from the Spanish Crown. Leona expanded her involvement by using her banking connections to secretly finance 
    various stages of the rebellion.She furthered her commitment by directly buying arms and 
    acquiring materials to make cannons and artillery. Leona also arranged the purchase and shipment of medicines to Vera Cruz. 
    She secretly transported them to neighborhoodsin Mexico City where she also hid revolutionary compatriots. 
-   <br>
+   
    Not content as a rebel and arms dealer, Leona then teamed with Quintana Roo to perfect her journalistic prose and write political 
    articles. He provided his family's printing presses to produce their liberal political ideas for the masses. Leona's revolutionary networks
    then distributed those leaflets, informing the public of Spanish atrocities towards Native and Mestizo civilians, crimes associated 
    with the established social caste system, and the need to obtain independence of Spain.</p>
-   with the established social caste system, and the need to obtain self-rule independent of Spain.</P>
  
  <p>1813, Leona’s correspondence to Andres and her revolutionary network was intercepted by Spanish Royalists.
  She was arrested fleeing Mexico City. Because of her social class status, the Court of Inquisition was limited 
@@ -62,8 +64,8 @@ along with their legal statuses. Because of Leona's heritage, she was publicly a
  reveal all the information they were seeking.</p>
 
  When that didn’t happen, the Court of Inquisition sentenced her to a convent prison at <em>Belen de Las Mochas.</em> </p>
-  <br>
-  <img src="https://raw.githubusercontent.com/VanessaGVilla/leona/main/lv18.jpg"/>
+
+  <center> <img src="https://raw.githubusercontent.com/VanessaGVilla/leona/main/lv18.jpg"/> </center>
   <h3>Fight for Freedom</h3>
 <p>Leona was imprisoned for several months, when three colonial officers arrived unannounced. They demanded access to Leona,
  claiming the need for another interrogation. The officers revealed themselves as rebel patriots, assisting Leona escape
