--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <html lang="en"> <body>
 <header> <h1>Leona Vicario</h1>
 </header> <main>
-  <img src="https://raw.githubusercontent.com/VanessaGVilla/leona/main/leona.jpg" />
+<img src="https://raw.githubusercontent.com/VanessaGVilla/leona/main/leona.jpg" alt= "Leona" class="center" >
+.center {
+display: block; auto;
+margin-right: auto;
+width: 50% ;  
+}
+  
 <HEAD>
   <meta charset="utf-8">
   <meta name="description" content=" a webpage summarizing the life of Leona Vicario.">
   <title> Leona Vicario, the patron mother of Mexico.</title>
   <link rel="shortcut icon" href="favicon ico">
 <p>This biography will include sections of her life:</p> 
-  <a href="./page1.html">Early Life</a>
+<a href="./page1.html">Early Life</a>
 <a href="./page2.html">Education</a>
 <a href="./page3.html"> Revolutionary Life</a>
 <a href="./page4.html"> La Patria Madre</a>
@@ -29,7 +35,7 @@ several sources state both her parents were Spanish. She was raised in a wealthy
 by her parents until she was 18, whereupon both died and left her in the care of her paternal uncle, who practiced law,
 Agustin Fernandez de San Salvador Pompous. At 18 yers of age she had acquired an invaluable education, which she put to use by 
 by filing for legal independence from her uncle, which allowed her to make all financial and legal decions in her own interest.</p>
-<br>
+
 <p> Leona had significant social standing in New Spain's (Mexico)racist caste system that 
 was forcefully imposed on it by the Spanish. The 16th century Spaniards, along with their overlords in the Roman Catholic Church, 
 were so obsessed with race that they produced posters commissioned by artists to describe the 16 official <q>racial mixtures</q> 
