--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ were so obsessed with race that they produced posters commissioned by artists to
 along with their legal statuses. Because of Leona's heritage, she was publicly acknowledged at the top of society heirarchy.
 It made her nearly untouchable when it came to capital crimes, along with a wealth of social privileges.</p>
   
-  <h3> Education </h>
+  <h3> Education </h3>
 <p> Leona received a prodigious education, a rare privilege for women at the time. She enjoyed reading, and collecting English
   and French literature. She also immersed herself in the fine arts, classical music, and singing. European literature at the time 
   was filled with political idealogies/rhetoric of overthrowing oppressive monoarchies, while advocating for equality.
